kubernetes/default/phpmyadmin.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    name: phpmyadmin
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      name: phpmyadmin
  template:
    metadata:
      labels:
        name: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
          limits:
            memory: "128Mi"
        securityContext:
          runAsNonRoot: true
          runAsUser: 33
          runAsGroup: 33
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          seccompProfile:
            type: RuntimeDefault
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: php-config
          mountPath: /usr/local/etc/php/conf.d/uploads.ini
          subPath: uploads.ini
      volumes:
      - name: php-config
        configMap:
          name: phpmyadmin
