kubernetes/default/signal-webhook.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signal-webhook
  labels:
    name: signal-webhook
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      name: signal-webhook
  template:
    metadata:
      labels:
        name: signal-webhook
    spec:
      containers:
      - name: signal-webhook
        image: registry.example.com/signal-webhook:latest
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "64Mi"
      volumes:
      - name: tmp
        emptyDir: {}
