kubernetes/default/video-viewer.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-viewer
  labels:
    name: video-viewer
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      name: video-viewer
  template:
    metadata:
      labels:
        name: video-viewer
    spec:
      containers:
      - name: video-viewer
        image: registry.example.com/video-viewer:latest
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
          subPath: video-viewer
        - name: tmp
          mountPath: /tmp
        resources:
          requests:
            memory: "64Mi"
          limits:
            memory: "64Mi"
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: sd
      - name: tmp
        emptyDir: {}
