kubernetes/default/kidcalendar.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kidcalendar
  namespace: default
  labels:
    app: kidcalendar
spec:
  selector:
    app: kidcalendar
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
