kubernetes/default/phpmyadmin.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  selector:
    name: phpmyadmin
  ports:
  - port: 80
    targetPort: 80
    name: http
