kubernetes/default/signal-webhook.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signal-webhook
spec:
  selector:
    name: signal-webhook
  ports:
  - port: 80
    targetPort: 8080
    name: http
