kubernetes/default/signal.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signal
spec:
  selector:
    name: signal
  ports:
  - port: 80
    targetPort: 8080
    name: http
