kubernetes/default/video-viewer.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-viewer
spec:
  selector:
    name: video-viewer
  ports:
  - port: 80
    targetPort: 3000
    name: http
