kubernetes/default/wishlist.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlist
  namespace: default
  labels:
    app: wishlist
spec:
  selector:
    app: wishlist
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
