kubernetes/default/collabora.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: collabora
spec:
  entryPoints:
    - websecure
  routes:
  # Static files
  - match: Host(`collabora.example.com`) && PathPrefix(`/browser`)
    kind: Rule
    services:
    - name: nextcloud-collabora
      port: 9980
    middlewares:
    - name: collabora-headers
  
  # WOPI discovery URL
  - match: Host(`collabora.example.com`) && PathPrefix(`/hosting/discovery`)
    kind: Rule
    services:
    - name: nextcloud-collabora
      port: 9980
    middlewares:
    - name: collabora-headers
  
  # Capabilities
  - match: Host(`collabora.example.com`) && PathPrefix(`/hosting/capabilities`)
    kind: Rule
    services:
    - name: nextcloud-collabora
      port: 9980
    middlewares:
    - name: collabora-headers
  
  # Main websocket
  - match: Host(`collabora.example.com`) && PathRegexp(`^/cool/(.*)/ws$`)
    kind: Rule
    services:
    - name: nextcloud-collabora
      port: 9980
    middlewares:
    - name: collabora-websocket
  
  # Download, presentation and image upload
  - match: Host(`collabora.example.com`) && PathRegexp(`^/(c|l)ool`)
    kind: Rule
    services:
    - name: nextcloud-collabora
      port: 9980
    middlewares:
    - name: collabora-headers
  
  # Admin Console websocket
  - match: Host(`collabora.example.com`) && PathPrefix(`/cool/adminws`)
    kind: Rule
    services:
    - name: nextcloud-collabora
      port: 9980
    middlewares:
    - name: collabora-websocket
  
  tls:
    secretName: cert

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: collabora-headers
spec:
  headers:
    customRequestHeaders:
      Host: collabora.example.com

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: collabora-websocket
spec:
  headers:
    customRequestHeaders:
      Host: collabora.example.com
      Connection: Upgrade
      Upgrade: websocket
