kubernetes/default/nextcloud.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-hsts
spec:
  headers:
    stsSeconds: 15552000
    stsIncludeSubdomains: true
    stsPreload: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`nc-test.example.com`) || Host(`nc.example.com`) || Host(`nextcloud.example.com`)
    kind: Rule
    middlewares:
    - name: nextcloud-hsts
    services:
    - name: nextcloud
      port: 8080
  tls:
    secretName: cert
