kubernetes/default/phpmyadmin.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: phpmyadmin
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`phpmyadmin.example.com`)
    kind: Rule
    services:
    - name: phpmyadmin
      port: 80
  tls:
    secretName: cert
