kubernetes/default/signal.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: signal
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`signal.example.com`)
    kind: Rule
    services:
    - name: signal
      port: 80
  tls:
    secretName: cert
