kubernetes/default/video-viewer.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: video-viewer
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`zahn.example.com`)
    kind: Rule
    services:
    - name: video-viewer
      port: 80
  tls:
    secretName: cert
