kubernetes/default/wishlist.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wishlist
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`wish.example.com`)
    kind: Rule
    services:
    - name: wishlist
      port: 80
  tls:
    secretName: cert
